How to manually curate datasets in LangSmith?

--- a/lang-smith.ipynb
+++ b/lang-smith.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e1f386d8-2b7f-45e8-9b5e-bf229de413b9",
    "metadata": {},
    "outputs": [
@@ -51,30 +51,32 @@
     }
    ],
    "source": [
+    "# Install necessary Python packages using pip:\n",
+    "# 1. langsmith - for LangChain tracing, debugging, and evaluation\n",
+    "# 2. openai - to interact with OpenAI models like GPT-3.5, GPT-4, etc.\n",
+    "# 3. ollama - to connect with and use local LLMs like LLaMA/Mistral via the Ollama runtime\n",
     "!pip install langsmith openai ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d1ebdb3a-ac50-4ba1-960c-b6763ab8aaec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import the os module to interact with the operating system's environment variables\n",
     "import os\n",
-    "os.environ['LANGCHAIN_TRACING_V2'] = 'true' # enables encoding\n",
-    "os.environ['LANGCHAIN_API_KEY'] = \"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\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7f3f729e-f697-491e-82ad-b5ff17dd72cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['LANGCHAIN_PROJECT'] = 'Test'"
+    "\n",
+    "# Enable LangChain Tracing v2 (used for debugging, visualizing, and monitoring LangChain executions)\n",
+    "os.environ['LANGCHAIN_TRACING_V2'] = 'true'  # Enables the newer version of LangChain tracing\n",
+    "\n",
+    "# Set your LangChain API key (this key is required to authenticate with LangChain services)\n",
+    "os.environ['LANGCHAIN_API_KEY'] = \"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\"\n",
+    "\n",
+    "\n",
+    "# Set the project name under which all traces will be grouped in LangSmith (LangChain's platform for tracing & evaluation)\n",
+    "os.environ['LANGCHAIN_PROJECT'] = 'Test'\n"
    ]
   },
   {
@@ -87,38 +89,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b3fb9a4e-9930-41ed-b37e-fb626771e9cf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import the pandas library for data manipulation and CSV operations\n",
     "import pandas as pd\n",
     "\n",
-    "# QA\n",
+    "# -------------------------\n",
+    "# Step 1: Define the QA pairs\n",
+    "# -------------------------\n",
+    "\n",
+    "# List of input questions related to DBRX model\n",
     "inputs = [\n",
     "    \"How many tokens was DBRX pre-trained on?\",\n",
     "    \"Is DBRX a MOE model and how many parameters does it have?\",\n",
     "    \"How many GPUs was DBRX trained on and what was the connectivity between GPUs?\",\n",
     "]\n",
     "\n",
+    "# Corresponding answers to the questions above\n",
     "outputs = [\n",
     "    \"DBRX was pre-trained on 12 trillion tokens of text and code data.\",\n",
     "    \"Yes, DBRX is a fine-grained mixture-of-experts (MoE) architecture with 132B total parameters.\",\n",
     "    \"DBRX was trained on 3072 NVIDIA H100s connected by 3.2Tbps Infiniband\",\n",
     "]\n",
     "\n",
-    "# Dataset\n",
+    "# -------------------------\n",
+    "# Step 2: Create a structured dataset\n",
+    "# -------------------------\n",
+    "\n",
+    "# Combine questions and answers into a list of dictionaries (each with 'question' and 'answer' keys)\n",
     "qa_pairs = [{\"question\": q, \"answer\": a} for q, a in zip(inputs, outputs)]\n",
+    "\n",
+    "# Convert the list of dictionaries into a pandas DataFrame (tabular format)\n",
     "df = pd.DataFrame(qa_pairs)\n",
     "\n",
-    "# Write to csv\n",
+    "# -------------------------\n",
+    "# Step 3: Save the dataset to a CSV file\n",
+    "# -------------------------\n",
+    "\n",
+    "# Define the full path where the CSV file will be saved (change the path as needed)\n",
     "csv_path = \"F:\\\\LangSmith\\\\DBRX_eval.csv\"\n",
-    "df.to_csv(csv_path, index=False) # Now Upload this Dataset from device to LangSmith"
+    "\n",
+    "# Write the DataFrame to a CSV file without including the index column\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
+    "# At this point, you can upload the generated CSV file to LangSmith for evaluation or dataset creation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e0f1aaf1-ea5d-42ad-93b2-758c48112e5e",
    "metadata": {},
    "outputs": [
@@ -137,26 +159,41 @@
     }
    ],
    "source": [
+    "# Import the LangSmith client for interacting with the LangSmith platform\n",
     "from langsmith import Client\n",
     "\n",
+    "# Initialize the LangSmith client (uses environment variables for authentication)\n",
     "client = Client()\n",
+    "\n",
+    "# Define the name of the dataset to be created in LangSmith\n",
     "dataset_name = \"DBRX\"\n",
     "\n",
-    "# Store\n",
+    "# -------------------------------\n",
+    "# Step 1: Create a new dataset\n",
+    "# -------------------------------\n",
+    "\n",
+    "# Create a new dataset on LangSmith with a name and description\n",
     "dataset = client.create_dataset(\n",
     "    dataset_name=dataset_name,\n",
-    "    description=\"QA pairs about DBRX model.\",\n",
+    "    description=\"QA pairs about DBRX model.\",  # Describes the purpose of the dataset\n",
     ")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 2: Upload examples to the dataset\n",
+    "# -------------------------------\n",
+    "\n",
+    "# Upload the list of input-output pairs as examples to the dataset\n",
+    "# `inputs` and `outputs` must be lists of dictionaries, one per example\n",
     "client.create_examples(\n",
-    "    inputs=[{\"question\": q} for q in inputs],\n",
-    "    outputs=[{\"answer\": a} for a in outputs],\n",
-    "    dataset_id=dataset.id,\n",
-    ")"
+    "    inputs=[{\"question\": q} for q in inputs],   # Convert input questions to dict format\n",
+    "    outputs=[{\"answer\": a} for a in outputs],   # Convert output answers to dict format\n",
+    "    dataset_id=dataset.id                      # Associate the examples with the created dataset\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c9bcedc1-3ee2-4dd4-97f1-6b9d66045fd9",
    "metadata": {},
    "outputs": [
@@ -172,6 +209,7 @@
     }
    ],
    "source": [
+    "# Define additional QA pairs to be appended to the existing dataset\n",
     "new_questions = [\n",
     "    \"What is the context window of DBRX Instruct?\",\n",
     "]\n",
@@ -180,21 +218,18 @@
     "    \"DBRX Instruct was trained with up to a 32K token context window.\",\n",
     "]\n",
     "\n",
-    "# See updated version in the UI\n",
+    "# ----------------------------------------\n",
+    "# Add new examples to the existing dataset\n",
+    "# ----------------------------------------\n",
+    "\n",
+    "# Use the same client and dataset ID to append the new question-answer pairs\n",
+    "# This allows you to incrementally build your dataset over time\n",
     "client.create_examples(\n",
-    "    inputs=[{\"question\": q} for q in new_questions],\n",
-    "    outputs=[{\"answer\": a} for a in new_answers],\n",
-    "    dataset_id=dataset.id,\n",
-    ")"
+    "    inputs=[{\"question\": q} for q in new_questions],   # Format the new question(s)\n",
+    "    outputs=[{\"answer\": a} for a in new_answers],       # Format the new answer(s)\n",
+    "    dataset_id=dataset.id                              # Link to the existing dataset\n",
+    ")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c46d8a44-de2e-4d7d-87f6-b24d034caebd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
